--- a/react-blockchain/src/components/App/components/BlockchainList/block_chain_list.css
+++ b/react-blockchain/src/components/App/components/BlockchainList/block_chain_list.css
@@ -8,8 +8,9 @@ block {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  border-radius: 20px;
   border-width: thin;
-  border-style: dotted;
+  border-style: solid;
   border-color: black;
   background-color: #bdc3c7;
   margin-bottom: 20px;
