--- a/src/components/App/components/BlockchainSection/components/AddBlock/add_block.css
+++ b/src/components/App/components/BlockchainSection/components/AddBlock/add_block.css
@@ -6,7 +6,7 @@
   border-width: thin;
   border-style: dotted;
   border-color: black;
-  background-color: #bdc3c7;
+  background-color: #ecf0f1;
   width: auto;
   padding: 20px;
   margin-bottom: 20px;
