--- a/src/components/App/components/BlockchainSection/block_chain_section.css
+++ b/src/components/App/components/BlockchainSection/block_chain_section.css
@@ -12,7 +12,7 @@ block {
   border-width: thin;
   border-style: solid;
   border-color: black;
-  background-color: #bdc3c7;
+  background-color: #ecf0f1;
   margin-bottom: 20px;
   padding: 10px;
 }
